# activity-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  collections.json  collections.json.example  docker-compose.yml  pyproject.toml  test_max_events.py  test_stats_embeds.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  logging.py  state.py
app/core/tests/: conftest.py  test_config.py  test_config_multiuser.py  test_database.py  test_logging.py  test_state.py
app/discord/: __init__.py  bot.py  commands.py  embeds.py  event_colors.py  event_embeds.py  event_grouping.py  nft_embeds.py  nft_event_colors.py  nft_poster.py  poster.py  quotes.py  stats_embeds.py  summaries.py  summary_embed.py  summary_scheduler.py
app/discord/tests/: conftest.py  test_embeds.py  test_event_embeds.py  test_event_grouping.py  test_poster.py  (+1 more)
app/github/: __init__.py  action_filter.py  branch_filter.py  client.py  events.py  polling.py  repo_filter.py
app/nft/: __init__.py  config.py  metadata.py  models.py  webhook_server.py
app/shared/: __init__.py  exceptions.py  models.py
app/stats/: achievement_checker.py  achievements.py  calculator.py  models.py  queries.py  service.py  streak_calculator.py
migrations/: 001_initial_quotes.sql  002_activity_tracking.sql  003_additional_quotes.sql  004_stats_and_achievements.sql  005_additional_event_types.sql  005_additional_event_types_down.sql  006_nft_tracking.sql  006_nft_tracking_down.sql  007_nft_add_image_urls.sql
scripts/: test_nft_embeds.py
tests/: __init__.py  conftest.py
(+23 files in other folders)
