[project]
name = "activity-bot"
version = "0.1.0"
description = "AI-powered bot providing development status updates"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.2,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "structlog>=24.0.0,<25.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP","ANN","S","DTZ","RUF","ARG","PTH"]
ignore = ["S311","E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101","ANN","ARG001","D","E731"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
namespace_packages = true
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["structlog.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["*.tests.*","test_*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app","tests"]
markers = ["integration: marks tests requiring real database"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*","*/test_*.py"]
